Editing: queryCommandValue("stylewithcss") should always return an empty string.

The new behavior is compatible with Firefox and Edge.
This CL fixes 4,622 tests in external/wpt/editing/.

BUG=704458

Review-Url: https://codereview.chromium.org/2775503005
Cr-Commit-Position: refs/heads/master@{#459324}

Former-commit-id: 57c2207020be6758153102c90902b4b49781744e